# mkcpr

./: .gitignore  LICENSE  README.md  mkcpr  mkcpr-config.json  mkcpr.py  output.tex  pyproject.toml  template.tex
Example/: Output.tex  Template.tex  mkcpr-config.json
_minted-output/: 03187762813299831F89907AE10F22928E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  035886E4A3565EB6BE2232842B0102498E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  04D96D9735BC600596DCFF852E4C85FB8E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  068E64E77EB7E916E0F699343463B35A8E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  0784185EE917F081AC8B0473D5B171898E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  0C4A6AA2EC98A672B7953B8E7784519C8E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  0C61B13E757F2D3A4C399A42A2C1DF5A8E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  0EF279F9A53066CCDE22E8ED917A1B618E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  0F8FF6E3D4B86E9060BE4FCA9E5384D28E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  12821E625091173D08FA61F85EC05BA98E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  15EB7391E9AC02A8CFC6F432C7EE03018E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  19295191031FBD3F178B75023EDDE4D18E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  1999FAC0F9B144E7E5AFCB567769D78D8E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  1D9AA519A4E01F134F9249DDAE53D97A8E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  1DAC8B567BC398938B0F708D6B6CA9938E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  218EDF51955AD8DEA4828375BC0C72F88E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  220430B97618492CEC6A81925ECDB2FC8E9CC9E18EF3525E16DF88C7D22BA5F8.pygtex  (+128 more)
mkcpr/: Config.py  Error.py  Util.py  __init__.py  command_line.py  (+1 more)
(+41 files in other folders)
