[tool.poetry]
name = "mkcpr"
version = "1.0.8"
description = "mkcpr is a command line utility that helps you to build your Competitive Programming Reference in PDF."
authors = ["searleser97 <serchgabriel97@gmail.com>"]
license = "AGPL-3.0-only"
readme = 'README.md'
repository = "https://github.com/searleser97/mkcpr"
homepage = "https://github.com/searleser97/mkcpr"
keywords = ['competitive', 'programming', 'reference', 'tool']

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
mkcpr = 'mkcpr.command_line:main'